syntax = "proto3";

import "common.proto";

option csharp_namespace = "AcademyCloud.Expenses.Protos.Interop";

package interop;

service Interop {
  rpc GetActivity (GetActivityRequest) returns (GetActivityResponse);
  rpc GetPayUser (GetPayUserRequest) returns (GetPayUserResponse);
  rpc GetQuota (GetQuotaRequest) returns (GetQuotaResponse);
}

message Subject {
  common.SubjectType type = 1;
  string id = 2;
}

message GetActivityRequest {
  repeated Subject subjects = 1;
}

message GetActivityResponse {
  map<string, bool> activities = 1;
}

message GetPayUserRequest {
  repeated Subject subjects = 1;
}

message GetPayUserResponse {
  map<string, string> payUsers = 1;
}

message GetQuotaRequest {
  repeated Subject subjects = 1;
}

message GetQuotaResponse {
  map<string, common.Resources> quotas = 1;
}
